--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,33 @@ body {
   text-align: center;
   background-color: #011f3f;
 }
+.name {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  border-width: 5px;
+  padding: 10px;
+  border-color: white;
+}
+.submit-butt {
+  border-radius: 10px;
+  border-width: 5px;
+  padding: 10px;
+  border-color: white;
+  margin-left: 30px;
+}
+.replay {
+  border-radius: 10px;
+  border-width: 5px;
+  padding: 10px;
+  border-color: white;
+  /* display: none; */
+}
 
 #level-title {
   font-family: "Press Start 2P", cursive;
   font-size: 2rem;
-  margin: 5%;
+  /* margin: 5%; */
   color: #fef2bf;
 }
 
