--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   padding: 10px;
   border-color: white;
 } */
-.submit-butt {
+.start-butt {
   border-radius: 10px;
   border-width: 5px;
   padding: 10px;
